# haskell-musicbrainz-ws2

./: .gitignore  musicbrainz-data.cabal
musicbrainz-data/: musicbrainz-data.cabal
musicbrainz-data/src/MusicBrainz/: Internal.hs  Types.hs
musicbrainz-data/src/MusicBrainz/Data/: Country.hs  GetByRef.hs  Language.hs  Mapping.hs  Release.hs  ReleaseStatus.hs  Script.hs
musicbrainz-ws2/: musicbrainz-ws2.cabal  sources.txt
musicbrainz-ws2/src/: Main.hs
musicbrainz-ws2/src/MusicBrainz/: Web.hs  XML.hs
musicbrainz-ws2/src/MusicBrainz/Web/: Snaplet.hs
musicbrainz-ws2/src/MusicBrainz/Web/Handler/: Release.hs
